# module-6-Gustitreshana

./: README.md
zoo_management_api/: .env  manage.py  package-lock.json  pyproject.toml
zoo_management_api/app/: __init__.py
zoo_management_api/app/models/: animals.py  employees.py  feeding.py
zoo_management_api/app/routes/: animals_route.py  employees_route.py  feeding_route.py
zoo_management_api/migrations/versions/: d3b49b1f212c_initial_migration.py
zoo_management_api/models/: animals.py  employees.py
zoo_management_api/tests/: test_animals.py  test_animals_route.py  test_app.py  test_employees.py  test_employees_route.py
