[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gustitreshana <gustith2105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
psycopg2 = "^2.9.9"
poetry-dotenv-plugin = "^0.2.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
